third_party/jerryscript/jerryscript/tests/jerry/fail/1/throw-number.js
// SPDX-FileCopyrightText: 2016 Samsung Electronics Co., Ltd.
// SPDX-FileCopyrightText: 2016 University of Szeged
// SPDX-License-Identifier: Apache-2.0

throw 0.1234;
